--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+b,
+input,
+button {
+  font-family: "Roboto Mono", monospace;
+  line-height: 1.5em;
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 2em;
+}
+
+h4 {
+  font-size: 0.75em;
+  font-weight: 400;
+  line-height: 2em;
+}
+
 body {
+  max-width: 100%;
+  min-width: 1400px;
+  min-height: 900px;
+  max-height: 900px;
   width: 100%;
+  height: 100vh;
+
+  background-color: white;
 }
 
 header {
@@ -15,11 +48,69 @@ header {
   background-color: rgb(225, 225, 225);
 }
 
-.main-content {
-  display: flex;
-  justify-content: center;
+.player-input {
   width: 100%;
-  height: 100vh;
+  height: 2.5em;
+}
+.current-player {
+  margin: 0 auto;
+}
+.gameinfo-container {
+  width: 20%;
+  height: 90%;
+
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5em;
+
+  background-color: rgb(225, 225, 225);
+}
+
+.gameinfo-container h2 {
+  width: 100%;
+  margin-left: 0.3em;
+}
+
+.usersPoints-container {
+  margin: 0.5em 0.5em 1em 0.5em;
+}
+
+.history-container {
+  background-color: white;
+  width: 85%;
+  height: 50%;
+  margin: 1em auto;
+  padding: 0.8em;
+  overflow-y: scroll;
+}
+
+.history-container h3 {
+  text-align: center;
+  border-bottom: 1px solid black;
+  margin-bottom: 0.8em;
+}
+
+.button {
+  width: 90%;
+  height: 3em;
+  background-color: gray;
+  border: none;
+  border-radius: 0.5em;
+  color: white;
+  margin: 1em auto;
+}
+
+.button:hover {
+  opacity: 60%;
+}
+
+.main-content {
+  margin: 0 auto;
+  min-width: 1400px;
+  max-width: 1400px;
+  display: flex;
+  width: 100%;
+  height: 80%;
 
   margin-top: 5em;
 }
@@ -27,26 +118,127 @@ header {
 .main-article {
   background-color: rgb(225, 225, 225);
   width: 50%;
-  height: 40%;
+  height: 50%;
+  margin: 0 auto;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.article-text {
+  text-align: center;
+  width: 100%;
+  height: 10%;
+
+  padding: 0.5em;
+
+  border-bottom: 1px solid black;
+}
+
+.article-pname-container {
+  width: 60%;
+  height: 5em;
+  margin: 0 auto;
+}
+
+.article-button {
+  width: 90%;
+  height: 2em;
+  background-color: rgb(96, 96, 96);
+  color: white;
+  font-size: larger;
+  border: none;
+  border-radius: 0.5em;
+  margin: 0 auto;
+}
+
+.article-button:hover {
+  opacity: 60%;
 }
 
 .playfield {
   display: flex;
+  flex-wrap: wrap;
   width: 80%;
-  height: 95%;
+  height: 100%;
 }
 
 .card {
-  /*position: relative;*/
   width: 150px;
   height: 150px;
-
-  border: 1px solid black;
-
   margin: 1em;
+  background-color: rgb(220, 220, 220);
+  overflow: hidden;
+  border: 5px;
+  border-style: solid;
+  border-radius: 0.3em;
+}
+
+.card-flip {
+  animation-name: flip;
+  animation-duration: 1s;
+}
+
+.card-flip .img {
+  animation-name: fade;
+  animation-duration: 0.5s;
+}
+
+.card-flip-back {
+  animation: flip-back;
+  animation-duration: 1s;
+}
+
+.card-flip-back .img {
+  animation-name: fade-back;
+  animation-duration: 0.5s;
 }
 
 .img {
   width: 100%;
   height: 100%;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fade-back {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes flip-back {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes flip {
+  0% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0);
+  }
 }
